--- a/trunk/Ecoordenador1.1/web/site/acessoServidor/menu.xhtml
+++ b/trunk/Ecoordenador1.1/web/site/acessoServidor/menu.xhtml
@@ -13,6 +13,7 @@ and open the template in the editor.
             <p:menuitem value="CRUD Atividades" url="/site/acessoServidor/cadastroAtividade.jsf"/>
             <p:menuitem value="CRUD Aluno" url="/site/acessoServidor/cadastroAluno.jsf"/>
             <p:menuitem value="CRUD Servidor" url="/site/acessoServidor/cadastroServidor.jsf"/>
+            <p:menuitem value="CRUD Disciplina" url="/site/acessoServidor/cadastroDisciplina.jsf"/>
             
         </p:submenu>
         <p:menuitem value="sair" url="/j_spring_security_logout" icon="ui-icon-close"/>
