--- a/Ecoordenador1.1/web/site/acessoServidor/menu.xhtml
+++ b/Ecoordenador1.1/web/site/acessoServidor/menu.xhtml
@@ -26,6 +26,7 @@ and open the template in the editor.
             <p:menuitem value="CRUD Periodo Letivo" url="/site/acessoServidor/cadastroPeriodoLetivo.jsf"/>
             <p:menuitem value="CRUD Curso" url="/site/acessoServidor/cadastroCurso.jsf"/>
             <p:menuitem value="CRUD Matriz Curricular" url="/site/acessoServidor/cadastroMatriz.jsf"/>
+            <p:menuitem value="CRUD Disciplina" url="/site/acessoServidor/cadastroDisciplina.jsf"/>
             <p:menuitem value="CRUD Turma" url="/site/acessoServidor/cadastroTurma.jsf"/>
             <p:menuitem value="CRUD Classe" url="/site/acessoServidor/cadastroClasse.jsf"/>
         </p:submenu>
