--- a/trunk/Ecoordenador1.1/web/site/acessoServidor/cadastroClasse.xhtml
+++ b/trunk/Ecoordenador1.1/web/site/acessoServidor/cadastroClasse.xhtml
@@ -29,12 +29,12 @@
                         
                         Dia da Semana:<p:selectOneMenu value="#{controllerClasse.horario.dia_semana}" style="width: 150px">
                             <f:selectItem itemLabel="-- Selecione --" noSelectionOption="true"/>
-                            <f:selectItem itemLabel="Segunda-feira" itemValue="segunda" />
-                            <f:selectItem itemLabel="Terça-feira" itemValue="terca" />
-                            <f:selectItem itemLabel="Quarta-feira" itemValue="quarta" />
-                            <f:selectItem itemLabel="Quinta-feira" itemValue="quinta" />
-                            <f:selectItem itemLabel="Sexta-feira" itemValue="sexta" />
-                            <f:selectItem itemLabel="Sábado" itemValue="sabado" />
+                            <f:selectItem itemLabel="Segunda-feira" itemValue="Segunda" />
+                            <f:selectItem itemLabel="Terça-feira" itemValue="Terça" />
+                            <f:selectItem itemLabel="Quarta-feira" itemValue="Quarta" />
+                            <f:selectItem itemLabel="Quinta-feira" itemValue="Quinta" />
+                            <f:selectItem itemLabel="Sexta-feira" itemValue="Sexta" />
+                            <f:selectItem itemLabel="Sábado" itemValue="Sábado" />
                         </p:selectOneMenu>
 
                         Horário Início: <p:calendar value="#{controllerClasse.horario.horario_inicio}" pattern="HH:mm" timeOnly="true"/>
@@ -154,12 +154,12 @@
                             
                             Dia da Semana:<p:selectOneMenu value="#{controllerClasse.horario.dia_semana}" style="width: 150px">
                                 <f:selectItem itemLabel="-- Selecione --" noSelectionOption="true"/>
-                                <f:selectItem itemLabel="Segunda-feira" itemValue="segunda" />
-                                <f:selectItem itemLabel="Terça-feira" itemValue="terca" />
-                                <f:selectItem itemLabel="Quarta-feira" itemValue="quarta" />
-                                <f:selectItem itemLabel="Quinta-feira" itemValue="quinta" />
-                                <f:selectItem itemLabel="Sexta-feira" itemValue="sexta" />
-                                <f:selectItem itemLabel="Sábado" itemValue="sabado" />
+                                <f:selectItem itemLabel="Segunda-feira" itemValue="Segunda" />
+                                <f:selectItem itemLabel="Terça-feira" itemValue="Terça" />
+                                <f:selectItem itemLabel="Quarta-feira" itemValue="Quarta" />
+                                <f:selectItem itemLabel="Quinta-feira" itemValue="Quinta" />
+                                <f:selectItem itemLabel="Sexta-feira" itemValue="Sexta" />
+                                <f:selectItem itemLabel="Sábado" itemValue="Sábado" />
                             </p:selectOneMenu>
 
 
