--- a/trunk/Ecoordenador1.1/web/site/acessoServidor/menu.xhtml
+++ b/trunk/Ecoordenador1.1/web/site/acessoServidor/menu.xhtml
@@ -23,16 +23,18 @@ and open the template in the editor.
         <p:submenu label="Controle de Horario" icon="ui-icon-bookmark">
             <p:menuitem value="Entrada/Saída" url="/site/acessoServidor/controleHorario.jsf"/>
             <p:menuitem value="Entrada/Saída (manual)" url="/site/acessoServidor/controleHorarioManual.jsf"/>
-            <p:menuitem value="CRUD Periodo Letivo" url="/site/acessoServidor/cadastroPeriodoLetivo.jsf"/>
-            <p:menuitem value="CRUD Curso" url="/site/acessoServidor/cadastroCurso.jsf"/>
-            <p:menuitem value="CRUD Matriz Curricular" url="/site/acessoServidor/cadastroMatriz.jsf"/>
-            <p:menuitem value="CRUD Disciplina" url="/site/acessoServidor/cadastroDisciplina.jsf"/>
-            <p:menuitem value="CRUD Turma" url="/site/acessoServidor/cadastroTurma.jsf"/>
-            <p:menuitem value="CRUD Classe" url="/site/acessoServidor/cadastroClasse.jsf"/>
+            <p:menuitem value="Manter Periodo Letivo" url="/site/acessoServidor/cadastroPeriodoLetivo.jsf"/>
+            <p:menuitem value="Manter Curso" url="/site/acessoServidor/cadastroCurso.jsf"/>
+            <p:menuitem value="Manter Matriz Curricular" url="/site/acessoServidor/cadastroMatriz.jsf"/>
+            <p:menuitem value="Manter Disciplina" url="/site/acessoServidor/cadastroDisciplina.jsf"/>
+            <p:menuitem value="Manter Turma" url="/site/acessoServidor/cadastroTurma.jsf"/>
+            <p:menuitem value="Manter Classe" url="/site/acessoServidor/cadastroClasse.jsf"/>
         </p:submenu>
         
         <p:submenu label="Relatórios" icon="ui-icon-bookmark">
             <p:menuitem value="Ponto Pessoal" url="/site/acessoServidor/relatorioPonto.jsf"/>
+            <p:menuitem value="Grade do Curso" url="/site/acessoServidor/relatorioGrade.jsf"/>
+            <p:menuitem value="Horário por Professor" url="/site/acessoServidor/relatorioHorarioServidor.jsf"/>
         </p:submenu>
         
         <p:menuitem value="sair" url="/j_spring_security_logout" icon="ui-icon-close"/>
